[workspace]
resolver = "2"
members = [
  "aoc_2018_1",
  "aoc_2018_2",
  "aoc_2019_1",
  "aoc_2019_2",
  "aoc_2019_3",
  "aoc_2019_4",
  "aoc_2019_5",
  "aoc_2019_6",
  "aoc_2019_7",
  "aoc_2019_8",
  "aoc_2019_9",
  "aoc_2019_10",
  "aoc_2019_11",
  "aoc_2019_12",
  "aoc_2019_13",
  "aoc_2019_14",
  "aoc_2020_01",
  "aoc_2020_02",
  "aoc_2022_01",
  "aoc_2022_02",
  "aoc_2022_03",
  "aoc_2022_04",
  "aoc_2022_05",
  "aoc_2022_06",
  "aoc_2022_07",
  "aoc_2022_08",
  "aoc_2022_09",
  "aoc_2022_10",
  "aoc_2023_01",
]
